        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=15172
        object fallback - empty string for first argument of setAttributeNS does not work like null

        https://bugs.webkit.org/show_bug.cgi?id=24548
        createElementNS("", name) should create an element in null namespace

        Tests: fast/dom/createElementNS-empty-namespace.html
               fast/dom/setAttributeNS-empty-namespace.html

        * dom/QualifiedName.h: (WebCore::QualifiedName::QualifiedNameImpl::QualifiedNameImpl):
        Convert empty namespaces to null.



Canonical link: https://commits.webkit.org/33759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41700 268f45cc-cd09-0410-ab3c-d52691b4dbfc