WebCore/dom/QualifiedName.h
@@ -49,7 +49,7 @@ public:
         QualifiedNameImpl(const AtomicString& prefix, const AtomicString& localName, const AtomicString& namespaceURI)
             : m_prefix(prefix)
             , m_localName(localName)
-            , m_namespace(namespaceURI)
+            , m_namespace(namespaceURI.isEmpty() ? nullAtom : namespaceURI)
         {
         }        
     };
